Slimmed pom.