@@ -1,10 +1,36 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!--
+ ~ The MIT License
+ ~
+ ~ Copyright (c) 2010-2017, Stefan Brausch, Mirko Friedenhagen, Jochen A. Fuerbacher,
+ ~ Kathi Stutz, Yordan Boev
+ ~
+ ~ Permission is hereby granted, free of charge, to any person obtaining a copy
+ ~ of this software and associated documentation files (the "Software"), to deal
+ ~ in the Software without restriction, including without limitation the rights
+ ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+ ~ copies of the Software, and to permit persons to whom the Software is
+ ~ furnished to do so, subject to the following conditions:
+ ~
+ ~ The above copyright notice and this permission notice shall be included in
+ ~ all copies or substantial portions of the Software.
+ ~
+ ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+ ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+ ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+ ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+ ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+ ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+ ~ THE SOFTWARE.
+ -->
+ 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>plugin</artifactId>
-        <version>2.11</version>
+        <version>2.28</version>
         <relativePath />
     </parent>
 
@@ -13,27 +39,32 @@
     <version>2.17-SNAPSHOT</version>
 
     <name>Jenkins Job Configuration History Plugin</name>
-    <description>Saves copies of job and system configurations.</description>
-    <url>http://wiki.jenkins-ci.org/display/JENKINS/JobConfigHistory+Plugin</url>
+    <description>Saves copies of job, node and system configurations.</description>
+    <url>https://plugins.jenkins.io/jobConfigHistory</url>
+    
     <issueManagement>
         <system>JIRA</system>
         <url>http://issues.jenkins-ci.org/secure/IssueNavigator.jspa?reset=true&amp;jqlQuery=project+%3D+JENKINS+AND+status+in+%28Open%2C+%22In+Progress%22%2C+Reopened%29+AND+component+%3D+%27jobConfigHistory%27</url>
     </issueManagement>
+    
     <scm>
         <connection>scm:git:git://github.com/jenkinsci/jobConfigHistory-plugin.git</connection>
         <developerConnection>scm:git:git@github.com:jenkinsci/jobConfigHistory-plugin.git</developerConnection>
         <url>https://github.com/jenkinsci/jobConfigHistory-plugin</url>
-      <tag>HEAD</tag>
-  </scm>
+        <tag>HEAD</tag>
+    </scm>
+    
     <ciManagement>
         <system>Jenkins</system>
         <url>https://jenkins.ci.cloudbees.com/job/plugins/job/jobConfigHistory-plugin/</url>
     </ciManagement>
+    
     <licenses>
         <license>
             <name>MIT License</name>
         </license>
     </licenses>
+    
     <developers>
         <developer>
             <id>stefanbrausch</id>
@@ -73,36 +104,15 @@
         </developer>
     </developers>
 
-
-    <!-- get every artifact through repo.jenkins-ci.org, which proxies all the artifacts that we need -->
-    <repositories>
-      <repository>
-         <id>repo.jenkins-ci.org</id>
-        <url>http://repo.jenkins-ci.org/public/</url>
-      </repository>
-    </repositories>
-
-    <pluginRepositories>
-      <pluginRepository>
-         <id>repo.jenkins-ci.org</id>
-         <url>http://repo.jenkins-ci.org/public/</url>
-      </pluginRepository>
-    </pluginRepositories>
-
     <properties>
     	<jenkins.version>1.554.1</jenkins.version>
-    	<java.level>7</java.level>
     	<jenkins-test-harness.version>1.554.1</jenkins-test-harness.version>
-        <!-- compare: http://docs.codehaus.org/display/MAVENUSER/POM+Element+for+Source+File+Encoding -->
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <jacoco-maven-plugin.version>0.7.1.201405082137</jacoco-maven-plugin.version>
-        <maven-surefire-plugin.version>2.17</maven-surefire-plugin.version>
-        <maven-surefire-report-plugin.version>2.17</maven-surefire-report-plugin.version>
-        <maven-javadoc-plugin.version>2.9.1</maven-javadoc-plugin.version>
+        <maven-surefire-report-plugin.version>2.20</maven-surefire-report-plugin.version>
         <maven-hpi-plugin.injectedTestName>InjectedIT</maven-hpi-plugin.injectedTestName>
-        <maven-dependency-plugin.version>2.8</maven-dependency-plugin.version>
+        <maven-checkstyle-plugin.version>2.17</maven-checkstyle-plugin.version>
+        <jdepend-maven-plugin.version>2.9.1</jdepend-maven-plugin.version>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.googlecode.java-diff-utils</groupId>
@@ -118,7 +128,6 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.11</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -134,12 +143,12 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+    
     <build>
         <plugins>
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>${jacoco-maven-plugin.version}</version>
                 <configuration>
                     <excludes>
                         <exclude>**/hudson/plugins/jobConfigHistory/JobConfigHistoryConsts.class</exclude>
@@ -160,7 +169,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
-                <version>${maven-dependency-plugin.version}</version>
                 <executions>
                     <execution>
                         <phase>site</phase>
@@ -179,7 +187,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>${maven-surefire-plugin.version}</version>
                 <configuration>
                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
                     <testFailureIgnore>false</testFailureIgnore>
@@ -188,9 +195,8 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>${maven-surefire-plugin.version}</version>
                 <configuration>
-                    <argLine>${argLine} -Xms256m -Xmx512m -XX:MaxPermSize=128m</argLine>
+                    <argLine>${argLine} -Xms256m -Xmx512m</argLine>
                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
                     <testFailureIgnore>true</testFailureIgnore>
                 </configuration>
@@ -201,14 +207,6 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                </configuration>
             </plugin>
         </plugins>
         <pluginManagement>
@@ -225,7 +223,6 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-site-plugin</artifactId>
-                    <version>3.3</version>
                     <executions>
                         <execution>
                             <id>attach-descriptor</id>
@@ -235,20 +232,18 @@
                         </execution>
                     </executions>
                 </plugin>
-                <!-- 1.509.X uses a SNAPSHOT-version of this plugin! -->
                 <plugin>
                     <groupId>org.kohsuke</groupId>
                     <artifactId>access-modifier-checker</artifactId>
-                    <version>1.4</version>
                 </plugin>
                 <plugin>
                     <groupId>org.jenkins-ci.tools</groupId>
                     <artifactId>maven-hpi-plugin</artifactId>
-                    <version>1.106</version>
                 </plugin>
             </plugins>
         </pluginManagement>
     </build>
+    
     <reporting>
         <plugins>
             <plugin>
@@ -263,13 +258,7 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jxr-plugin</artifactId>
-                <version>${maven-jxr-plugin.version}</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>${maven-javadoc-plugin.version}</version>
                 <configuration>
                     <show>private</show>
                     <quiet>true</quiet>
@@ -309,21 +298,8 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-pmd-plugin</artifactId>
-                <version>${maven-pmd-plugin.version}</version>
-                <configuration>
-                    <linkXref>true</linkXref>
-                    <includeTests>true</includeTests>
-                    <sourceEncoding>${project.build.sourceEncoding}</sourceEncoding>
-                    <minimumTokens>100</minimumTokens>
-                    <targetJdk>1.5</targetJdk>
-                </configuration>
-            </plugin>
-            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>findbugs-maven-plugin</artifactId>
-                <version>${findbugs-maven-plugin.version}</version>
                 <configuration>
                     <xmlOutput>true</xmlOutput>
                     <threshold>Low</threshold>
@@ -336,7 +312,6 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>${jacoco-maven-plugin.version}</version>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -346,8 +321,8 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
-                <version>${maven-dependency-plugin.version}</version>
             </plugin>
         </plugins>
     </reporting>
+    
 </project>
